✨ API|EndPoint Directiva ok
