# routes/api-v1.php
@@ -8,6 +8,7 @@ use App\Http\Controllers\Api\V1\AboutApiController;
 use App\Http\Controllers\Api\V1\CategoryApiController;
 use App\Http\Controllers\Api\V1\ThematicApiController;
 use App\Http\Controllers\Api\V1\AboutCmpjApiController;
+use App\Http\Controllers\Api\V1\DirectiveApiController;
 use App\Http\Controllers\Api\V1\AboutObservatoryApiController;
 
 /*
@@ -31,7 +32,7 @@ Route::group(['middleware' => 'token.api.custom'], function () {
     Route::apiResource('categories', CategoryApiController::class)->names('categories');
     Route::apiResource('sobre-observatorio', AboutObservatoryApiController::class)->names('about.observatory');
     Route::apiResource('sobre-cmpj', AboutCmpjApiController::class)->names('about.cmpj');
-    // Route::apiResource('directiva', CategoryApiController::class)->names('directive');
+    Route::apiResource('directiva', DirectiveApiController::class)->names('directive');
     // Route::apiResource('logos', CategoryApiController::class)->names('logos');
     // Route::apiResource('politica-juventud', CategoryApiController::class)->names('youth-policy');
 });
